--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -18,7 +18,7 @@
 // @import "bootstrap/scss/forms.scss";
 // @import "bootstrap/scss/buttons.scss";
 // @import "bootstrap/scss/transitions.scss";
-// @import "bootstrap/scss/dropdown.scss";
+@import "bootstrap/scss/dropdown.scss";
 // @import "bootstrap/scss/button-group.scss";
 @import "bootstrap/scss/nav.scss";
 @import "bootstrap/scss/navbar.scss";
@@ -58,6 +58,7 @@
 @import "./02_atoms/_a-scroll-link";
 @import "./02_atoms/_a-action-link";
 @import "./02_atoms/_a-brand";
+@import "./02_atoms/_a-dropdown";
 
 // Molecules
 @import "./03_molecules/_m-primary-nav";
