feat: services cards

--- a/src/styles/04_organisms/_o-hero.scss
+++ b/src/styles/04_organisms/_o-hero.scss
@@ -23,6 +23,7 @@
 
     font-size: 5rem;
     color: $white;
+    margin-bottom: 50px;
 
     > span {
       @supports (-webkit-text-stroke: 1px $white) {
