--- a/www/css/bundle.css
+++ b/www/css/bundle.css
@@ -8764,15 +8764,28 @@ progress {
   transition: all 0.3s ease;
   gap: 15px;
 }
+@media (min-width: 992px) {
+  .a-more-link {
+    margin-left: -50%;
+  }
+}
+@media (max-width: 991.98px) {
+  .a-more-link {
+    margin-left: -33%;
+  }
+}
 .a-more-link span {
-  max-width: 0.01px;
   overflow: hidden;
   white-space: nowrap;
   color: #fff;
   transition: all 0.3s ease;
+  opacity: 0;
+}
+.a-more-link:hover {
+  margin-left: 0;
 }
 .a-more-link:hover span {
-  max-width: 100%;
+  opacity: 1;
 }
 .a-more-link::before {
   position: absolute;
@@ -8966,7 +8979,8 @@ progress {
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: space-around;
+  justify-content: center;
+  text-align: center;
   min-height: 100%;
   border-bottom: 1px solid rgba(255, 255, 255, 0.1);
 }
@@ -8984,30 +8998,42 @@ progress {
   .m-product-box__actions {
     margin-top: auto;
   }
-  .m-product-box__body {
+  .m-product-box__about {
     margin-bottom: 150px;
   }
 }
+.m-product-box:hover .m-product-box__figure {
+  z-index: 22;
+  opacity: 1;
+}
 .m-product-box__body {
+  z-index: 99;
+}
+.m-product-box__about {
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 .m-product-box__icon {
   margin-bottom: 5.625rem;
 }
 .m-product-box__icon img {
-  max-width: 220px;
+  width: 160px;
   height: auto;
 }
 .m-product-box__title {
   font-size: 1.5625rem;
   color: #fff;
   font-weight: 700;
+  max-width: 250px;
 }
 .m-product-box__perex {
   font-size: 1rem;
   line-height: 25px;
   color: #fff;
+}
+.m-product-box__actions {
+  margin-top: 20px;
 }
 .m-product-box__figure {
   position: absolute;
@@ -9016,6 +9042,8 @@ progress {
   bottom: 0;
   right: 0;
   z-index: 2;
+  opacity: 0;
+  transition: all 0.3s ease;
 }
 .m-product-box__figure img {
   display: block;
@@ -9023,10 +9051,6 @@ progress {
   height: 100%;
   -o-object-fit: cover;
   object-fit: cover;
-  opacity: 0;
-}
-.m-product-box__figure img:hover {
-  opacity: 1;
 }
 .m-product-box__figure::before {
   position: absolute;
@@ -9035,7 +9059,7 @@ progress {
   right: 0;
   left: 0;
   content: "";
-  background-image: linear-gradient(270deg, #273455 0%, rgba(39, 52, 85, 0) 100%);
+  background-image: linear-gradient(0deg, #273455 0%, rgba(39, 52, 85, 0) 100%);
 }
 
 .o-hello {
