--- a/src/styles/02_atoms/_a-title.scss
+++ b/src/styles/02_atoms/_a-title.scss
@@ -1,7 +1,8 @@
 .a-title {
   // font-family: $font-family-secondary;
   // font-weight: $font-weight-normal !important;
-
+  font-size: 1.5625rem
+  ;
   > span {
     display: block;
     font-weight: $font-weight-bold !important;
