--- a/src/styles/03_molecules/_m-submenu.scss
+++ b/src/styles/03_molecules/_m-submenu.scss
@@ -62,6 +62,7 @@
     padding-bottom: 5px;
     padding-top: 5px;
     transition: all 0.3s ease;
+    color: $primary;
 
     &:hover {
       color: $secondary;
