--- a/src/styles/04_organisms/_o-list.scss
+++ b/src/styles/04_organisms/_o-list.scss
@@ -17,21 +17,10 @@
     flex: 0 0 auto;
     width: 100%;
 
-    // @include media-breakpoint-up(sm) {
-    //   flex: 0 0 percentage($number: 1/2);
-    //   max-width: percentage($number: 1/2);
-    // }
-
-    // @include media-breakpoint-up(md) {
-    //   flex: 0 0 percentage($number: 1/3);
-    //   max-width: percentage($number: 1/3);
-    //   width: 33.33333%;
-    // }
-
     @include media-breakpoint-up(xl) {
-      flex: 0 0 math.div(1,4);
-      max-width: math.div(1,4);
-      width: 25%;
+      flex: 0 0 percentage(math.div(1,4));
+      max-width: percentage(math.div(1,4));
+      width: percentage(math.div(1,4));
     }
   }
 }
