--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -76,4 +76,5 @@
 @import "./04_organisms/_o-hero";
 @import "./04_organisms/_o-section";
 @import "./04_organisms/_o-header";
+@import "./04_organisms/_o-footer";
 @import "./04_organisms/_o-list";
