--- a/src/styles/03_molecules/_m-adress-box.scss
+++ b/src/styles/03_molecules/_m-adress-box.scss
@@ -6,12 +6,42 @@
   color: $white;
   max-width: 440px;
   min-height: 568px;
+  position: relative;
+
+  &--dotted {
+    padding-top: 2.25rem;
+    background-color: $gray-800;
+  }
+
+  &__dots {
+    display: flex;
+    gap: 49px;
+    justify-content: center;
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+    span {
+      background-color: $white;
+      width: 27px;
+      height: 27px;
+      display: block;
+      border-radius: 50%;
+    }
+  }
 
   &__header {
-    padding: 1.5rem 0;
+    padding-top: 1.5rem;
+    padding-bottom: 1.5rem;
+    padding-left: 30px;
     border-bottom: 1px solid rgba($color: $white, $alpha: 0.2);
     text-transform: uppercase;
     color: $white;
+  }
+
+  &__body {
+    padding-left: 30px;
   }
 
   &__name {
