--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -69,7 +69,8 @@
 @import "./03_molecules/_m-primary-nav";
 @import "./03_molecules/_m-submenu";
 @import "./03_molecules/_m-product-box";
-@import "./03_molecules/_m-adress-box";
+@import "./03_molecules/_m-box";
+@import "./03_molecules/_m-list";
 
 // Organisms
 @import "./04_organisms/_o-hello";
