--- a/src/styles/02_atoms/_a-list.scss
+++ b/src/styles/02_atoms/_a-list.scss
@@ -7,7 +7,7 @@
     line-height: 35px;
   }
 
-   a {
+  a {
     text-decoration: none;
     transition: all 0.3s ease;
 
@@ -21,6 +21,13 @@
 
     li {
       width: 100%;
+    }
+  }
+
+  &--dark {
+
+    a {
+      color: $gray-800;
     }
   }
 
