--- a/src/styles/04_organisms/_o-hero.scss
+++ b/src/styles/04_organisms/_o-hero.scss
@@ -22,6 +22,10 @@
       font-size: 4rem;
     }
 
+    @include media-breakpoint-down(md) {
+      font-size: 2rem;
+    }
+
     font-size: 5rem;
     color: $white;
     margin-bottom: 50px;
