feat: contact-us.html

--- a/src/styles/02_atoms/_a-title.scss
+++ b/src/styles/02_atoms/_a-title.scss
@@ -16,4 +16,12 @@
       color: $black;
     }
   }
+
+  &--bold {
+    font-weight: $font-weight-bold;
+  }
+
+  &--xs {
+    font-size: 15px;
+  }
 }
