--- a/src/styles/02_atoms/_a-btn.scss
+++ b/src/styles/02_atoms/_a-btn.scss
@@ -18,6 +18,11 @@
   outline: none;
   text-decoration: if($link-decoration == none, null, none);
 
+  &.disabled {
+    opacity: 0.3;
+    pointer-events: none;
+  }
+
   &--primary {
     background-color: $white;
     color: $primary;
