--- a/src/styles/03_molecules/_m-list.scss
+++ b/src/styles/03_molecules/_m-list.scss
@@ -14,6 +14,10 @@
   }
 
   &__body {
+    @include media-breakpoint-down(md) {
+      gap: 0;
+    }
+
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
