--- a/src/styles/04_organisms/_o-hello.scss
+++ b/src/styles/04_organisms/_o-hello.scss
@@ -1,4 +1,6 @@
 .o-hello {
+  $root: &;
+
   padding: 235px 0;
   position: relative;
   color: $white;
@@ -10,7 +12,6 @@
     bottom: 0;
     right: 0;
     z-index: 2;
-    background: $black;
 
     img{
       display: block;
@@ -18,7 +19,6 @@
       height: 100%;
       -o-object-fit: cover;
       object-fit: cover;
-      opacity: 0.8;
     }
   }
 
@@ -54,10 +54,50 @@
   &__actions {
     @include media-breakpoint-down(sm) {
       flex-direction: column;
+      align-items: flex-start;
     }
 
     margin-top: 60px;
     display: flex;
     gap: 20px;
+  }
+
+  &--full {
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    color: $white;
+
+    #{$root}__title {
+      @include media-breakpoint-down(md) {
+        font-size: 2.5rem;
+      }
+
+      @include media-breakpoint-down(sm) {
+        font-size: 2rem
+      }
+      font-size: 5rem;
+      margin: 40px 0;
+    }
+
+    #{$root}__name {
+      font-size: 1.5625rem;
+      font-weight: $font-weight-bold;
+      margin: 40px 0;
+    }
+
+    #{$root}__perex {
+      margin: auto;
+    }
+
+    #{$root}__actions {
+      @include media-breakpoint-down(sm) {
+        align-items: center;
+      }
+      justify-content: center;
+      margin-top: 40px;
+    }
   }
 }
