--- a/src/styles/04_organisms/_o-section.scss
+++ b/src/styles/04_organisms/_o-section.scss
@@ -20,6 +20,8 @@
     }
   }
 
+  padding: 9.375rem 0;
+
   &--light {
     background-color: $gray-200;
     color: $gray-800;
@@ -27,6 +29,12 @@
 
   &__title {
     margin-bottom: 5rem;
+
+    &--sm {
+      font-size: 2.8125rem;
+      margin-bottom: 2.5rem;
+
+    }
   }
 
   &__name {
@@ -41,8 +49,6 @@
     font-weight: $font-weight-bold;
     padding-left: 40px;
   }
-
-  padding: 9.375rem 0;
 
   &__actions {
     display: flex;
